<resources>
    <string name="app_name">preway</string>

    <string name="Next">Next</string>
    <string name="login_tootlbar_title">Log in or sign up</string>
    <string name="Your_phone_number">Your phone number</string>
    <string name="Get_Help">Get Help</string>
    <string name="Legal">Legal</string>
    <string name="play_now">Play Now</string>
    <string name="Review_Us">Review Us</string>
    <string name="Daily_nChallenge">"Daily
Challenge"</string>

    <string name="HQ_Shop">HQ Shop</string>
    <string name="Buy_More_Coins">Buy More Coins</string>
    <string name="Search_HQ_users">Search HQ users</string>
    <string name="Cancel">Cancel</string>
    <string name="Connect_Address_Book">Connect Address Book</string>
    <string name="Connect_with_your_friends_on_HQ_See_their_status_during_games_and_more_secret_friend_features_coming">Connect with your friends on HQ. See their status during games and more secret friend features coming soon!</string>
    <string name="Block_user">Block user</string>
    <string name="Remove_friend">Remove friend</string>
    <string name="All_time">All time</string>
    <string name="This_week">This week</string>
    <string name="You_need_more_Coins_to_buy_that_Power_Up">You need more Coins to buy that Power Up</string>
    <string name="Get_Coins">Get Coins</string>
    <string name="Not_now">Not now</string>
    <string name="Referral_Codes">Referral Codes</string>
    <string name="Earn_Power_Ups_when_you_refer_friends">Earn Power Ups when you refer friends</string>
    <string name="Enable_Notifications">Enable Notifications</string>
    <string name="Get_notified_when_the_shows_are_live">Get notified when the shows are live:</string>
    <string name="Discoverable_nearby">Discoverable nearby</string>
    <string name="Enable_this_setting_to_be_discoverable_to_people_playing_HQ_near_you_It_s_fun">"Enable this setting to be discoverable to people playing HQ near you. It's fun!"</string>
    <string name="Refresh_contacts">Refresh contacts</string>
    <string name="Enable_this_to_automatically_keep_your_contacts_on_HQ_up_to_date">Enable this to automatically keep your contacts on HQ up to date.</string>
    <string name="Connect_Instagram">Connect Instagram</string>
    <string name="Connect_your_account_to_discover_new_Instagram_users_and_get_new_followers_from_HQX">Connect your account to discover new Instagram users and get new followers from HQX</string>
    <string name="Logout">Logout</string>
    <string name="Notifications">Notifications</string>
    <string name="Discover_People">Discover People</string>
    <string name="Games">Games</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Your_profile">Your profile</string>
    <string name="Enter_Verification_Code">Enter Verification Code</string>
    <string name="Resend_code">Resend code</string>
    <string name="Call_me">Call me</string>
    <string name="Live_Game_Shows">Live Game Shows</string>
    <string name="Get_Started">Get Started</string>
    <string name="By_signing_up_you_agree_to_the">By signing up you agree to the</string>
    <string name="Terms_of_Use">Terms of Use</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="and_b_Rules_b">and <b>Rules</b></string>
    <string name="support_activity_title">Support</string>
    <string name="zs_general_contact_us_button_label_accessibility">Contact us</string>
    <string name="Rules">Rules</string>
    <string name="Tell_us_about_your_n_experience">"Tell us about your
 experience"</string>

    <string name="Your_detailed_feedback_helps_us_make_HQ_Trivia_better">Your detailed feedback helps us make HQ Trivia better.</string>
    <string name="Report_issue">Report issue</string>
    <string name="Rate_us">Rate us</string>
    <string name="Time_s_up">"Time's up!"</string>
    <string name="Question">Question</string>
    <string name="Thanks_for_being_patient_n_Your_game_will_resume_shortly">"Thanks for being patient!
 Your game will resume shortly."</string>
    <string name="Reconnecting">Reconnecting…</string>
    <string name="Answer_trivia_questions_to_win_rewards">Answer trivia questions to win rewards!</string>
    <string name="Continue">Continue</string>


    <string name="one">What is the Capital of Iran?</string>
    <string name="Two">What the answer of 2*3?</string>
    <string name="Three">what is the Heart of Body?</string>
    <string name="Four">What the name of the Tallest
        Mountain in The world?</string>

    <string name="Five">What is the co-founder of Apple Inc?</string>
    <string name="Six">What is the co-founder of
        Microsoft Inc?</string>
    <string name="Seven">What is the co-founder of Apple Inc?</string>
    <string name="Eight">What is the co-founder of Apple Inc?</string>
    <string name="Nine">What is the co-founder of Apple Inc?</string>
    <string name="Ten">What is the co-founder of Apple Inc?</string>
    <string name="Twelve">What is the co-founder of Apple Inc?</string>
    <string name="Eleven">What is the co-founder of Apple Inc?</string>


    <string name="AoneOne">Tehran</string>
    <string name="AoneTwo">Barcelona</string>
    <string name="AoneThree">Tokiyo</string>

    <string name="ATwoOne">8</string>
    <string name="ATwoTwo">5</string>
    <string name="ATwoThree">6</string>

    <string name="AThreeOne">sample1</string>
    <string name="AThreeTwo">sample2</string>
    <string name="AThreeThree">sample3</string>
    <string name="SampleFourth">sample4</string>
    <string name="Results">Results</string>
    <string name="You_Earned">You Earned</string>
    <string name="Points">Points</string>
    <string name="Coins">Coins</string>
    <string name="Power_Ups">Power Ups</string>
    <string name="Unlock_Next_Game">Unlock Next Game</string>
    <string name="Use_a_Game_Unlock">Use a Game Unlock</string>
    <string name="Start_the_Next_Game">Start the Next Game</string>
    <string name="Locked">Locked</string>
    <string name="Enter_Username">Enter UserName</string>
    <string name="Enter_Referral_Code">Please Enter ReferralCode</string>
    <string name="Username">Please Enter Username:</string>
    <string name="liveShow">Live Show</string>

</resources>
