<?xml version="1.0" encoding="utf-8" ?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_nav_person_selector"
        android:id="@+id/page_discover_people"
        android:title="@string/Discover_People"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_nav_store_selector"
        android:id="@+id/page_store"
        android:title="@string/HQ_Shop"
        app:showAsAction="ifRoom" />
    <item
      android:icon="@drawable/bottom_menu_home"
        android:id="@+id/page_lobby"
        android:title="@string/Games"
        android:checked="true"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_nav_leaderboard_selector"
        android:id="@+id/page_leaderboard"
        android:title="@string/Leaderboard"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_default_avatar_cloud"
        android:id="@+id/page_profile"
        android:title="@string/Your_profile"
        app:showAsAction="ifRoom" />
</menu>
