<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer_items"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getHelpButton"
        android:background="@drawable/button_transparent"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:text="@string/Get_Help"
        android:textAllCaps="false"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/legalButton"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Caption1Secondary" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/legalButton"
        android:background="@drawable/button_transparent"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:text="@string/Legal"
        android:textAllCaps="false"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reviewUsButton"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintStart_toEndOf="@id/getHelpButton"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Caption1Secondary"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviewUsButton"
        android:background="@drawable/button_transparent"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:text="@string/Review_Us"
        android:textAllCaps="false"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.0"
        app:layout_constraintStart_toEndOf="@id/legalButton"
        app:layout_constraintTop_toTopOf="parent"
         style="@style/Caption1Secondary"/>
</androidx.constraintlayout.widget.ConstraintLayout>