<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_rect"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/subheadline"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:id="@id/titleView"
        android:layout_width="@dimen/grid_22"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_6"
        android:layout_marginBottom="@dimen/grid_6"
        android:text="@string/You_need_more_Coins_to_buy_that_Power_Up"
        android:lineSpacingMultiplier="1.2"
        app:layout_constraintBottom_toTopOf="@id/needCoinsConfirmationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textSize="@dimen/body"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:id="@id/needCoinsConfirmationButton"
        android:background="@drawable/rounded_edittext"
        android:padding="@dimen/grid_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_4"
        android:minWidth="150.0dip"
        android:text="@string/Get_Coins"
        android:backgroundTint="@color/hq_yellow"
        app:layout_constraintBottom_toTopOf="@id/needCoinsDismissButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:textSize="@dimen/body"
        android:textColor="@color/text_header_secondary"
        android:gravity="center"
        android:id="@id/needCoinsDismissButton"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/grid_6"
        android:layout_marginTop="@dimen/grid_2"
        android:layout_marginBottom="@dimen/grid_4"
        android:text="@string/Not_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/needCoinsConfirmationButton"
        app:layout_constraintStart_toStartOf="@id/needCoinsConfirmationButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
