<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/grid_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_3"
        android:layout_marginEnd="@dimen/grid_3">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingsAvatar"
            android:background="@drawable/ic_default_avatar_cloud"
            android:layout_width="@dimen/grid_12"
            android:layout_height="@dimen/grid_12"
            android:layout_marginTop="@dimen/grid_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar
            android:id="@+id/uploadProgess"
            android:visibility="gone"
            android:layout_width="@dimen/grid_16"
            android:layout_height="@dimen/grid_16"
            android:progressTint="@color/hq_blue"
            app:layout_constraintBottom_toBottomOf="@+id/settingsAvatar"
            app:layout_constraintLeft_toLeftOf="@+id/settingsAvatar"
            app:layout_constraintRight_toRightOf="@+id/settingsAvatar"
            app:layout_constraintTop_toTopOf="@+id/settingsAvatar" />
        <ImageView
            android:layout_width="@dimen/grid_4"
            android:layout_height="@dimen/grid_4"
            app:layout_constraintEnd_toEndOf="@+id/settingsAvatar"
            app:layout_constraintTop_toTopOf="@+id/settingsAvatar"
            app:srcCompat="@drawable/ic_edit" />
        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center" android:id="@+id/settingsUsername"
            android:background="?android:selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="0.0dip"
            android:layout_marginTop="@dimen/grid_2"
            android:drawablePadding="@dimen/grid_1"
            android:drawableEnd="@drawable/ic_edit"
            android:paddingStart="@dimen/grid_1"
            android:paddingEnd="@dimen/grid_1"
            app:autoSizeMaxTextSize="28.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsAvatar"
            style="@style/Headline" />
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20.0sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:gravity="center"
            android:text="Share code: Mohammadreza"
            android:id="@+id/shareCodeButton"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/grid_7"
            android:layout_marginTop="@dimen/grid_4"
            android:layout_marginBottom="@dimen/grid_1"
            android:lines="1"
            android:fontFamily="@font/circularstdbold"
            android:backgroundTint="@color/hq_red"
            app:autoSizeMaxTextSize="20.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsUsername"
            style="@style/ButtonRound" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsReferralsTitle"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_4"
            android:text="@string/Referral_Codes"
            app:autoSizeMaxTextSize="@dimen/subheadline"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shareCodeButton"
            style="@style/BodyPrimary" />
        <TextView
            android:id="@+id/settingsReferralsSubtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Earn_Power_Ups_when_you_refer_friends"
            app:layout_constraintTop_toBottomOf="@id/settingsReferralsTitle"
            style="@style/Caption1Secondary" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/settingsReferralContainer"
            android:background="@drawable/rounded_rect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:backgroundTint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsReferralsSubtitle" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsNotificationsTitle"
            android:visibility="gone"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:text="@string/Notifications"
            app:autoSizeMaxTextSize="@dimen/subheadline"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/settingsNearbySwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsReferralContainer"
            style="@style/BodyPrimary" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsNotificationsDescription"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:text="@string/Get_notified_when_the_shows_are_live"
            android:fontFamily="@font/circularstdbook"
            app:autoSizeMaxTextSize="16.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/settingsNotificationsTitle"
            style="@style/Caption1Secondary" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/settingsNotificationsSwitches"
            android:background="@drawable/rounded_rect"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:backgroundTint="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/settingsNotificationsDescription" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsNearbyTitle"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_4"
            android:text="@string/Discoverable_nearby"
            app:autoSizeMaxTextSize="@dimen/subheadline"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/settingsNearbySwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsNotificationsSwitches"
            style="@style/BodyPrimary" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsNearbyDescription"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:text="@string/Enable_this_setting_to_be_discoverable_to_people_playing_HQ_near_you_It_s_fun"
            android:fontFamily="@font/circularstdbook"
            app:autoSizeMaxTextSize="16.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/settingsNearbySwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsNearbyTitle"
            style="@style/Caption1Secondary" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settingsNearbySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settingsNearbyTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsNearbyTitle" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsRefreshContactsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_3"
            android:text="@string/Refresh_contacts"
            app:autoSizeMaxTextSize="@dimen/subheadline"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/settingsRefreshContactsSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsNearbyDescription"
            style="@style/BodyPrimary" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsRefreshContactsDescription"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:layout_marginBottom="@dimen/grid_4"
            android:text="@string/Enable_this_to_automatically_keep_your_contacts_on_HQ_up_to_date"
            android:fontFamily="@font/circularstdbook"
            app:autoSizeMaxTextSize="16.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/settingsConnectInstagramTitle"
            app:layout_constraintEnd_toStartOf="@+id/settingsRefreshContactsSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsRefreshContactsTitle"
            style="@style/Caption1Secondary" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settingsRefreshContactsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settingsRefreshContactsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsRefreshContactsTitle" />
        <androidx.constraintlayout.widget.Group
            android:id="@+id/settingsConnectInstagramGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="settingsConnectInstagramTitle,settingsConnectInstagramSwitch,settingsConnectInstagramDescription" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsConnectInstagramTitle"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_3"
            android:text="@string/Connect_Instagram"
            app:autoSizeMaxTextSize="@dimen/subheadline"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/settingsConnectInstagramTitleEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsRefreshContactsDescription"
            style="@style/BodyPrimary" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsConnectInstagramDescription"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:text="@string/Connect_your_account_to_discover_new_Instagram_users_and_get_new_followers_from_HQX"
            android:fontFamily="@font/circularstdbook"
            app:autoSizeMaxTextSize="16.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/settingsLogoutButton"
            app:layout_constraintEnd_toStartOf="@+id/settingsConnectInstagramSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsConnectInstagramTitle"
            style="@style/Caption1Secondary" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/settingsConnectInstagramTitleEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="settingsConnectInstagramSwitch,settingsConnectInstagramHandle" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settingsConnectInstagramSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settingsConnectInstagramTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsConnectInstagramTitle" />
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="@dimen/caption_2"
            android:textColor="@color/white"
            android:id="@+id/settingsConnectInstagramHandle"
            android:background="@drawable/button_round"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="0.0dip"
            android:maxWidth="120.0dip"
            android:textAllCaps="false"
            android:fontFamily="@font/circularstdmedium"
            android:paddingStart="@dimen/grid_1"
            android:paddingEnd="@dimen/grid_1"
            app:autoSizeMaxTextSize="12.0sp"
            app:autoSizeMinTextSize="8.0sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/settingsConnectInstagramTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settingsConnectInstagramTitle" />
        <Button
            android:textColor="@color/text_body_secondary"
            android:id="@+id/settingsLogoutButton"
            android:background="@drawable/button_round_light_grey_border"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/grid_5"
            android:layout_marginTop="@dimen/grid_4"
            android:layout_marginBottom="@dimen/grid_4"
            android:text="@string/Logout" android:paddingStart="@dimen/grid_4"
            android:paddingEnd="@dimen/grid_4"
            app:layout_constraintBottom_toTopOf="@+id/versionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsConnectInstagramDescription"
            style="@style/ButtonRoundSmall" />
        <TextView
            android:textColor="@color/mid_grey"
            android:gravity="center_horizontal"
            android:id="@+id/versionTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstdbook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
